fix: update footer background color and divider color for improved visibility

--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -9,7 +9,7 @@ footer {
 }
 
 footer .footer-container {
-  background-color: #012517;
+  background-color: #05070a;
   font-size: 0.875rem;
   font-weight: 500;
   display: flex;
